2013-07-01   Grigori Rybkine <Grigori.Rybkine@cern.ch>

	* python/WorkAreaLib.py: Get install area location from cmt
	so that it is correct whether CMTUSERCONTEXT is set or not
	* tagging PyUtils-00-13-09
	
2013-06-18  Sebastien Binet  <binet@farnsworth>

	* tagging PyUtils-00-13-08
	* try to cater for CMTUSERCONTEXT which might inject a
	  non-writeable path in CTMPATH (at first position)
	* M python/WorkAreaLib.py

2013-05-13  Sebastien Binet  <binet@voatlas04.cern.ch>

	* tagging PyUtils-00-13-07
	* add --disable-recursive-opt: useful for large n-tuples (python is recursively slow)
	* M bin/filter-and-merge-d3pd.py

2013-05-02  Sebastien Binet  <binet@farnsworth>

	* tagging PyUtils-00-13-06
	* fixing bug #101385: use ctypes to remove unwanted stray NULLs
	  (also to extract tag_guid)
	* M python/AthFile/impl.py

2013-04-24  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-13-05
	* fixing bug #101200: use ctypes instead of .rstrip(0) to remove
	  unwanted stray NULLs
	* M python/AthFile/impl.py

2013-04-08  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-13-04
	* diff-root: add an --error-mode switch to better customize when to
	  stop the diffing process.
	* M python/scripts/diff_root_files.py
	* M python/RootUtils.py

2013-03-29  Sebastien Binet  <binet@lxplus434.cern.ch>

	* tagging PyUtils-00-13-03
	* fixing (part of) bug #100920: use rstrip to remove unwanted stray NULLs
	* M python/AthFile/impl.py

2013-02-28  Frank Winklmeier  <fwinkl@cern>
	
	* tagging PyUtils-00-13-02
	* python/scripts/tc_submit_tag.py: All authentication handled by
	pyAMI directly (remove --user and --password command line args)

2013-02-26  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-13-01
	* more pyami-4 fixes
	* M python/scripts/tc_submit_tag.py

2013-02-25  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-13-00
	* amilib: migrate to PyAmi-4
	* M python/AmiLib.py
	* M python/scripts/tc_show_clients.py

2013-02-19  Sebastien Binet  <binet@cern.ch>
